--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "IAK-web": {
+    "tsf-grip": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/IAK-web",
+            "outputPath": "dist/tsf-grip",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -75,18 +75,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "IAK-web:build"
+            "browserTarget": "tsf-grip:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "IAK-web:build:production"
+              "browserTarget": "tsf-grip:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "IAK-web:build"
+            "browserTarget": "tsf-grip:build"
           }
         },
         "test": {
@@ -123,15 +123,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "IAK-web:serve"
+            "devServerTarget": "tsf-grip:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "IAK-web:serve:production"
+              "devServerTarget": "tsf-grip:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "IAK-web"
+  "defaultProject": "tsf-grip"
 }
